estructura interna de header y main

--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
 <title>Mi pagina web</title>
 </head>
 <body>
-    
+    <header>
+    </header>
 </body>
-
-
+<main>
+<section></section>
+<section></section>
+<section></section>
+<section></section>
+<section></section>
+</main>
+<footer>
+</footer>
 </html>
 
 
