agregué una imagen

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Mi pagina web</title>
 </head>
 <body>
+    <img src="img/Rostro de mujer dibujada.jpg" alt="">
     <h1>
         Hola Mundo!
     </h1>
