agregué tamaño de la foto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Mi pagina web</title>
 </head>
 <body>
-    <img src="img/Rostro de mujer dibujada.jpg" alt="">
+    <img src="img/Rostro de mujer dibujada.jpg" width="300"   alt="">
     <h1>
         Hola Mundo!
     </h1>
